prevented wheel squis on small resolustions

--- a/src/css/components/wheel.css
+++ b/src/css/components/wheel.css
@@ -5,6 +5,7 @@
   position: relative;
   border-radius: 50%;
   overflow: hidden;
+  flex: none;
 }
 
 .wheel-section {
