--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,4 +4,9 @@ h1 {
 article {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+}
+article > div {
+  margin: 10px;
 }
